@@ -3,6 +3,7 @@
 [+] New method DateTimeUtils.Add . It allows add specific amount of period "DateTimePeriod" to date.
 [*] DateTimeUtils.GetDiff now returns negative values.
 [*] DateTimeUtils.GetRange now returns reverse collection if "from" date is greater than "to" date.
+[+] Add DateTimeUtils overloads for DateTimeOffset: GetRange, Add, GetStartOfPeriod, GetEndOfPeriod, Truncate.
 [+] Add CollectionUtils.ChunkSelectRangeAsync for IAsyncEnumerable.
 [*] Make paramter update of CollectionUtils.ApplyDiff optional.
 [*] Improve CollectionUtils chunk select methods validation.
